--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,29 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+
+
+
+    <script type="text/javascript">
+    
+      $(document).ready(function(){
+      $("#flip1").click(function(){
+        $("#panel1").slideToggle("slow");
+      });
+    });
+      $(document).ready(function(){
+      $("#flip2").click(function(){
+        $("#panel2").slideToggle("slow");
+      });
+    });
+      $(document).ready(function(){
+      $("#flip3").click(function(){
+        $("#panel3").slideToggle("slow");
+      });
+    });
+    </script>
+
+    
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
